--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '18.12.1'
-      - run: npm install
+      - run: npm ci
       - run: npm run build
       - run: firebase use --add
       - run: firebase deploy --token $FIREBASE_TOKEN
