--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "recharts": "^2.2.0",
     "web-vitals": "^3.1.0",
     "xlsx": "^0.18.5"
   },
