--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@mui/material": "^5.11.0",
     "@mui/x-data-grid": "^5.17.17",
     "@mui/x-date-pickers": "^5.0.10",
+    "@react-oauth/google": "^0.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "axios": "^1.3.3",
     "eslint-config-react-app": "^7.0.1",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
