--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/x-date-pickers": "^5.0.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "axios": "^1.3.3",
     "eslint-config-react-app": "^7.0.1",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
