--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.122",
+    "@mui/material": "^5.11.12",
     "@mui/x-data-grid": "^5.17.17",
     "@mui/x-date-pickers": "^5.0.10",
     "@react-oauth/google": "^0.7.0",
