--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "recharts": "^2.2.0",
+    "swr": "^2.1.5",
     "web-vitals": "^3.1.0",
     "xlsx": "^0.18.5"
   },
