--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.7",
     "@mui/x-data-grid": "^6.9.2",
+    "@react-oauth/google": "^0.11.1",
     "@tanstack/react-query": "^4.29.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
