--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "@mui/x-data-grid": "^6.9.2",
     "@react-oauth/google": "^0.11.1",
     "@tanstack/react-query": "^4.29.19",
+    "dayjs": "^1.11.9",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
+    "react-select": "^5.7.4",
     "recharts": "^2.7.2",
     "sass": "^1.63.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
